[package]
name = "ioscpy"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "macOS CLI to mirror and control a jailbroken iPhone over USB"
authors = ["Lautaro Villarreal Culic' <lautaro@lautarovculic.com> (https://lautarovculic.com)"]
license = "MIT"
homepage = "https://lautarovculic.com"
repository = "https://github.com/lautarovculic/ioscpy"
readme = "../README.md"
keywords = ["ios", "jailbreak", "mirroring", "usbmux", "macos"]
categories = ["command-line-utilities"]

[[bin]]
name = "ioscpy"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3"
minifb = "0.27"
zune-jpeg = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
block = "0.1"
cocoa = "0.25"

# Host clipboard on Linux/Windows (macOS uses NSPasteboard directly). Text only,
# so image-data is dropped; wayland-data-control adds Wayland alongside X11.
[target.'cfg(not(target_os = "macos"))'.dependencies]
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[lints.clippy]
all = "warn"
